--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,8 +1,19 @@
-allprojects {
+buildscript {
     repositories {
         google()
         mavenCentral()
     }
+    dependencies {
+        // Thêm classpath cho Google services plugin
+        classpath 'com.google.gms:google-services:4.4.2'
+    }
+}
+
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+    }   
 }
 
 rootProject.buildDir = "../build"
