--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: t_shirt_football_project
-description: "A new Flutter project."
+description: 'A new Flutter project.'
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -31,10 +31,22 @@ dependencies:
   flutter:
     sdk: flutter
 
+  provider: ^6.0.0
+  fl_chart: 0.36.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  http: ^0.13.3
+  shared_preferences: ^2.0.9
+  intl: ^0.19.0
+  firebase_core: ^3.6.0
+  image_picker: ^1.1.2
+  firebase_storage: ^12.3.4
+  firebase_auth: ^5.3.1
+  firebase_messaging: ^15.1.3
+  google_sign_in: ^6.2.1
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
@@ -52,11 +64,13 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - ./lib/assets/images/logo.webp
+    - ./lib/assets/images/profile_img.webp
 
   # To add assets to your application, add an assets section, like this:
   # assets:
