--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  http: ^0.13.3
+  http: 1.2.2
   shared_preferences: ^2.0.9
   intl: ^0.19.0
   firebase_core: ^3.6.0
@@ -46,7 +46,9 @@ dependencies:
   firebase_auth: ^5.3.1
   firebase_messaging: ^15.1.3
   google_sign_in: ^6.2.1
+  googleapis_auth: ^1.6.0
   path: ^1.9.0
+  flutter_local_notifications: ^17.2.4
 
 dev_dependencies:
   flutter_test:
@@ -71,6 +73,7 @@ flutter:
   assets:
     - ./lib/assets/images/logo.webp
     - ./lib/assets/images/profile_img.webp
+    - ./lib/assets/t-shirt-football-shop-firebase-adminsdk-2p3fq-2bd07b2985.json
 
   # To add assets to your application, add an assets section, like this:
   # assets:
